# python-calling-haskell-calling-python

./: .gitignore  CHANGELOG.md  README.md  example.py  ouroboros.cabal  ouroboros.py
csrc/: OuroborosWrapper.c
src/: ByteBox.hs  CleverVector.hs  FatPtr.hs  Ouroboros.hs  SerializedExceptions.hs  SizePrefixedArray.hs
