cabal-version:      2.4
name:               ouroboros
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             qqwy
maintainer:         qqwy@gmx.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  SizePrefixedArray, FatPtr

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0, async, vector, unix
    hs-source-dirs:   src
    default-language: Haskell2010

foreign-library Ouroboros
  type:                native-shared

  -- 'standalone' means: Compile in the (threaded!!) RTS
  -- options: standalone

  -- Only supported on Linux, not sure if we need this:
  -- lib-version-info:    6:3:2

  build-depends:       base ^>=4.17.0.0, async, vector, unix, storable-tuple
  hs-source-dirs:      src
  other-modules:       Ouroboros, SizePrefixedArray
  c-sources:           csrc/OuroborosWrapper.c
  ghc-options: -Wall -threaded
  default-language:    Haskell2010

-- executable ouroboros
--     main-is:          Main.hs

--     -- Modules included in this executable, other than Main.
--     -- other-modules:

--     -- LANGUAGE extensions used by modules in this package.
--     -- other-extensions:
--     build-depends:
--         base ^>=4.19.0.0,
--         ouroboros

--     hs-source-dirs:   app
--     default-language: Haskell2010
